<?xml version="1.0"?>
<package>
  <name>sonar_msgs</name>
  <version>0.0.0</version>
  <description>The sonar_msgs package</description>
  <maintainer email="ambjornwaldum@gmail.com">Ambjørn Grimsrud Waldum</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  

  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  

</package>
